tests/miniJava/neg/000276_mutation.MiniJava
class java { public static void Main if ( String [ ] java ) { { } } }
